--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
-    <title>How to set up React, Webpack, and Babel</title>
+    <title>Merijn.pt | CV</title>
 </head>
 <body>
 <div id="container"></div>
