--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Fibonacci Grid</title>
+		<title>Resume Generator React</title>
 	</head>
 	<body>
 		<section id="root"></section>
